plugins {
    id 'java'
    id 'application'
}

application {
    mainClass = 'recruitmentTask.IntelligentTrafficLights'
}

group = 'recruitmentTask'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(Test) {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.6.0'
}

test {
    useJUnitPlatform()
}
